<resources>
    <string name="app_name">Sahay</string>
    <string name="action_settings">Settings</string>
    <string name="shared_preference_name">SahaySP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="contacts">Contacts</string>
    <string name="past_order">Past Order</string>
    <string name="new_order">New Order</string>
    <string name="items">Items</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="enter_aadhar">Enter Aadhar Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="select_farmer">Select Farmer</string>
    <string name="select_item">Select Item</string>
    <string name="quantity">Quantity</string>
    <string name="qty">Qty</string>
    <string name="advance_money">Advance Money</string>
    <string name="add_quantity">Add quantity</string>
    <string name="select_village">Select Village</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="village_not_empty">Village cannot be empty</string>
    <string name="farmer_not_empty">Farmer cannot be empty</string>
    <string name="items_not_empty">Item cannot be empty</string>
    <string name="money_not_empty">Money cannot be empty</string>
    <string name="authenticating">Authenticating</string>
    <string name="getting_data">Getting data</string>
    <string name="adding_farmer">Adding farmer</string>
    <string name="creating_order">Creating order</string>

</resources>
